--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.7.2",
-    "bootstrap": "^4.1.3",
+    "angular-route": "^1.7.3",
     "jquery": "^3.3.1",
     "requirejs": "^2.3.5"
   },
