--- a/public/package.json
+++ b/public/package.json
@@ -7,7 +7,8 @@
     "angular": "^1.7.2",
     "angular-route": "^1.7.3",
     "jquery": "^3.3.1",
-    "requirejs": "^2.3.5"
+    "requirejs": "^2.3.5",
+    "semantic-ui": "^2.3.3"
   },
   "devDependencies": {},
   "scripts": {
